fix: hidden elements affecting overflow

--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ input:user-invalid {
     font-size: 40px;
     width: var(--size);
     height: var(--size);
+    aspect-ratio: 1 / 1;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -134,6 +135,8 @@ input:user-invalid {
     grid-template-rows: repeat(2, 300px);
     grid-column-gap: 10px;
     grid-row-gap: 10px;
+    padding: 5px;
+    overflow: hidden;
 
     &>div {
         overflow: hidden;
